<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_main"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_grid_on_24"
        android:title="@string/text_main"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_individual"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_highlight_24"
        android:title="@string/text_individual"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_self_improvement_24"
        android:title="@string/text_profile"
        app:showAsAction="always" />

</menu>